# physical-ai-and-humanoid-robotics

./: .dockerignore  .gitignore  CLAUDE.md  PROJECT_ANALYSIS.md  docker-compose.yml
.claude/: settings.local.json
.claude/skills/blog-planner/: SKILL.md
.claude/skills/study-notes-creator/: SKILL.md
.github/workflows/: deploy.yml  python-lint.yml
.specify/memory/: constitution.md
backend/: pyproject.toml
backend/src/: __init__.py
backend/src/api/: main.py
backend/src/core/: config.py
backend/src/models/: schemas.py
backend/src/rag/: ingest.py  retrieval.py
frontend/: docusaurus.config.ts  package-lock.json
frontend/docs/01-Module-1-ROS2/: 01-Week-1-Foundations.md  02-Week-2-Sensors.md  03-Week-3-ROS2-Arch.md  04-Week-4-Packages.md  05-Week-5-Comms.md
frontend/docs/02-Module-2-Gazebo/: 06-Week-6-Sim-Basics.md  07-Week-7-Adv-Sim.md
frontend/docs/03-Module-3-Isaac/: 08-Week-8-Isaac-Fundamentals.md  09-Week-9-Perception.md  10-Week-10-RL.md
frontend/docs/04-Module-4-VLA/: 11-Week-11-Kinematics.md  12-Week-12-Manipulation.md  13-Week-13-Conversational.md  14-Capstone.md
frontend/src/context/: HardwareContext.tsx  LanguageContext.tsx
frontend/src/hooks/: useUserProfile.ts
frontend/src/pages/: index.tsx
frontend/src/theme/: Root.tsx
history/adr/: 0001-ros2-distribution-selection.md  0002-python-dependency-management.md  0003-frontend-backend-data-integration.md  0004-sim-to-real-personalization-strategy.md
infrastructure/: Dockerfile.physical  Dockerfile.sim
infrastructure/docker/: dev.amd64.Dockerfile  dev.arm64.Dockerfile
infrastructure/scripts/: colcon_poetry_build.sh  detect_ros_env.sh
specs/001-physical-textbook/: plan.md  quickstart.md  spec.md  tasks.md
(+31 files in other folders)
