[tool.poetry]
name = "physical-ai-textbook-backend"
version = "0.1.0"
description = "Backend for Physical AI & Humanoid Robotics Textbook"
authors = ["Admin <admin@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.10"
uvicorn = "^0.27.0"
qdrant-client = "^1.7.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
